--- a/index.html
+++ b/index.html
@@ -400,72 +400,83 @@
 								</ul>
 							</div>
 						</div>
+						
 						<div class="tab-content px-lg-0" id="pills-tabContent">
-							<div class="tab-pane fade show active" id="pills-pathologist" role="tabpanel" aria-labelledby="pills-pathologist-tab" tabindex="0">
-								<div class="row justify-content-between align-items-stretch">
-									<div class="col-md-5">
-										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
-										<h2 class="display-5">General Nadi Pariksha</h2>
-										<h4 class="mb-lg-3 mb-2">Traditional Pulse Diagnosis: </h4><p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
-										<h4 class="mb-lg-3 mb-2">Personalized Assessment: </h4><p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
-										<h4 class="mb-lg-3 mb-2">Customized Treatment Plan: </h4><p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
-										<ul class="list-unstyled text-larger">
-											<!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
-										</ul>
-										<a href="./General nadi-parikshna.html"><button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book a Appoinment</button></a>
-									</div>
-									<div class="col-md-6">
-									<img src="./images/icons/General nadi.png" alt="">
+    <div class="tab-pane fade show active" id="pills-pathologist" role="tabpanel" aria-labelledby="pills-pathologist-tab" tabindex="0">
+        <div class="row justify-content-between align-items-stretch" style="margin: 0;">
+            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
+                <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+                <h2 class="display-5">General Nadi Pariksha</h2>
+                <h4 class="mb-lg-3 mb-2">Traditional Pulse Diagnosis:</h4>
+                <p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
+                <h4 class="mb-lg-3 mb-2">Personalized Assessment:</h4>
+                <p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
+                <h4 class="mb-lg-3 mb-2">Customized Treatment Plan:</h4>
+                <p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
+                <ul class="list-unstyled text-larger">
+                    <!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
+                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
+                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
+                </ul>
+                <a href="./General nadi-parikshna.html">
+                    <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
+                </a>
+            </div>
+            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
+                <img src="./images/icons/General nadi.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="tab-pane fade" id="pills-orthopedic" role="tabpanel" aria-labelledby="pills-orthopedic-tab" tabindex="0">
+        <div class="row justify-content-between align-items-stretch" style="margin: 0;">
+            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
+                <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+                <h2 class="display-5">Premium Nadi Pariksha</h2>
+                <h4 class="mb-lg-3 mb-2">Comprehensive Health Evaluation:</h4>
+                <p>The Premium Nadi Pariksha includes a thorough pulse diagnosis along with an assessment of physical and mental health.</p>
+                <h4 class="mb-lg-3 mb-2">Integrated Techniques:</h4>
+                <p>This service combines advanced Ayurvedic methods such as yoga, dietary advice, and lifestyle counseling to enhance the diagnostic process.</p>
+                <h4 class="mb-lg-3 mb-2">Holistic Wellness Path:</h4>
+                <p>Offers deeper insights into your well-being, providing a holistic plan to rejuvenate your health through personalized recommendations and therapies.</p>
+                <!--<ul class="list-unstyled text-larger">
+                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Yoga</li>
+                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Diet</li>
+                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse Diagonsis</li>
+                </ul>-->
+                <a href="./premium-nadi-pariksha.html">
+                    <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
+                </a>
+            </div>
+            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
+                <img src="./images/icons/Premium nadi.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="tab-pane fade" id="pills-psychiatrist" role="tabpanel" aria-labelledby="pills-psychiatrist-tab" tabindex="0">
+        <div class="row justify-content-between align-items-stretch" style="margin: 0;">
+            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
+                <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+                <h2 class="display-5">Panchakarma Treatments</h2>
+                <h4 class="mb-lg-3 mb-2">Detoxification Therapy:</h4>
+                <p>Panchakarma is designed to cleanse the body of toxins, rejuvenate tissues, and restore balance through five main therapeutic procedures.</p>
+                <h4 class="mb-lg-3 mb-2">Customized Treatments:</h4>
+                <p>Treatments such as Nasya (nasal therapy) and Vamana (therapeutic vomiting) are tailored to individual needs, addressing specific health concerns and imbalances.</p>
+                <h4 class="mb-lg-3 mb-2">Mind-Body Balance:</h4>
+                <p>These therapies aim to harmonize the body, mind, and spirit, promoting overall wellness and preventing future health issues.</p>
+                <!--<ul class="list-unstyled text-larger">
+                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Nasya</li>
+                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Vamana</li>
+                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Boost Immunity</li>
+                </ul>-->
+                <h1>Coming soon...</h1>
+            </div>
+            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
+                <img src="./images/icons/panchakarma-latest.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</div>
 
-										<!--<img src="https://static.wixstatic.com/media/ba45f1_c2ee10d91f1b4e4a93b4c64c1ef660ca~mv2.png/v1/fill/w_560,h_438,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/Nadi%20Pariksha%20image.png" alt=".." class="rounded-6 h-100 object-cover">-->
-									</div>
-								</div>
-							</div>
-							<div class="tab-pane fade" id="pills-orthopedic" role="tabpanel" aria-labelledby="pills-orthopedic-tab" tabindex="0">
-								<div class="row justify-content-between align-items-stretch">
-									<div class="col-md-5">
-										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
-										<h2 class="display-5">Premium Nadi Pariksha</h2>
-										<h4 class="mb-lg-3 mb-2">Comprehensive Health Evaluation: </h4><p>The Premium Nadi Pariksha includes a thorough pulse diagnosis along with an assessment of physical and mental health</p>
-										<h4 class="mb-lg-3 mb-2">Integrated Techniques: </h4><p>This service combines advanced Ayurvedic methods such as yoga, dietary advice, and lifestyle counseling to enhance the diagnostic process.</p>
-										<h4 class="mb-lg-3 mb-2">Holistic Wellness Path: </h4><p>Offers deeper insights into your well-being, providing a holistic plan to rejuvenate your health through personalized recommendations and therapies.</p>
-										<!--<ul class="list-unstyled text-larger">
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Yoga</li>
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Diet</li>
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse Diagonsis</li>
-										</ul>-->
-										<a href="./premium-nadi-pariksha.html"><button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book a Appoinment</button></a>
-									</div>
-									<div class="col-md-6">
-										<img src="./images/icons/Premium nadi.jpg" alt="">
-										<!--<img src="https://static.wixstatic.com/media/ba45f1_c2ee10d91f1b4e4a93b4c64c1ef660ca~mv2.png/v1/fill/w_560,h_438,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/Nadi%20Pariksha%20image.png" alt=".." class="rounded-6 h-100 object-cover">-->
-									</div>
-								</div>
-							</div>
-							<div class="tab-pane fade" id="pills-psychiatrist" role="tabpanel" aria-labelledby="pills-psychiatrist-tab" tabindex="0">
-								<div class="row justify-content-between align-items-stretch">
-									<div class="col-md-5">
-										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
-										<h2 class="display-5">Panchakarma Treatments</h2>
-										<h4 class="mb-lg-3 mb-2">Detoxification Therapy: </h4><p>Panchakarma is designed to cleanse the body of toxins, rejuvenate tissues, and restore balance through five main therapeutic procedures.</p>
-										<h4 class="mb-lg-3 mb-2">Customized Treatments: </h4><p>Treatments such as Nasya (nasal therapy) and Vamana (therapeutic vomiting) are tailored to individual needs, addressing specific health concerns and imbalances.</p>
-										<h4 class="mb-lg-3 mb-2">Mind-Body Balance: </h4><p>These therapies aim to harmonize the body, mind, and spirit, promoting overall wellness and preventing future health issues.</p>
-										<!--<ul class="list-unstyled text-larger">
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Nasya</li>
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Vamana</li>
-											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Boost Immunity</li>
-										</ul>-->
-										<h1>Coming soon...</h1>
-									</div>
-									<div class="col-md-6">
-										<img src="./images/icons/panchakarma-latest.jpg" alt="">
-									<!--	<img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt=".." class="rounded-6 h-100 object-cover">-->
-									</div>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 <!-- 
