--- a/index.html
+++ b/index.html
@@ -403,29 +403,29 @@
 						
 						<div class="tab-content px-lg-0" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-pathologist" role="tabpanel" aria-labelledby="pills-pathologist-tab" tabindex="0">
-        <div class="row justify-content-between align-items-stretch" style="margin: 0;">
-            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
-                <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
-                <h2 class="display-5">General Nadi Pariksha</h2>
-                <h4 class="mb-lg-3 mb-2">Traditional Pulse Diagnosis:</h4>
-                <p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
-                <h4 class="mb-lg-3 mb-2">Personalized Assessment:</h4>
-                <p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
-                <h4 class="mb-lg-3 mb-2">Customized Treatment Plan:</h4>
-                <p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
-                <ul class="list-unstyled text-larger">
-                    <!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
-                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
-                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
-                </ul>
-                <a href="./General nadi-parikshna.html">
-                    <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
-                </a>
-            </div>
-            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
-                <img src="./images/icons/General nadi.png" alt="">
-            </div>
+      <div class="row justify-content-between align-items-stretch">
+        <div class="col-md-6">
+            <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+            <h2 class="display-5">General Nadi Pariksha</h2>
+            <h4 class="mb-lg-3 mb-2">Traditional Pulse Diagnosis:</h4>
+            <p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
+            <h4 class="mb-lg-3 mb-2">Personalized Assessment:</h4>
+            <p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
+            <h4 class="mb-lg-3 mb-2">Customized Treatment Plan:</h4>
+            <p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
+            <ul class="list-unstyled text-larger">
+                <!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
+                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
+                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
+            </ul>
+            <a href="./General nadi-parikshna.html">
+                <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
+            </a>
         </div>
+        <div class="col-md-6 d-flex align-items-center justify-content-center">
+            <img src="./images/icons/General nadi.png" alt="" class="img-fluid">
+        </div>
+    </div>
     </div>
     <div class="tab-pane fade" id="pills-orthopedic" role="tabpanel" aria-labelledby="pills-orthopedic-tab" tabindex="0">
         <div class="row justify-content-between align-items-stretch" style="margin: 0;">
