--- a/index.html
+++ b/index.html
@@ -403,27 +403,38 @@
 						
 						<div class="tab-content px-lg-0" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-pathologist" role="tabpanel" aria-labelledby="pills-pathologist-tab" tabindex="0">
-      <div class="row justify-content-between align-items-stretch">
+       <div class="row justify-content-center">
         <div class="col-md-6">
-            <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
-            <h2 class="display-5">General Nadi Pariksha</h2>
-            <h4 class="mb-lg-3 mb-2">Traditional Pulse Diagnosis:</h4>
-            <p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
-            <h4 class="mb-lg-3 mb-2">Personalized Assessment:</h4>
-            <p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
-            <h4 class="mb-lg-3 mb-2">Customized Treatment Plan:</h4>
-            <p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
-            <ul class="list-unstyled text-larger">
-                <!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
-                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
-                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
-            </ul>
-            <a href="./General nadi-parikshna.html">
-                <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
-            </a>
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+                </div>
+                <div class="col-md-6">
+                    <h2 class="display-5">General Nadi Pariksha</h2>
+                    <h4 class="mb-lg-3 mb-2">Traditional Pulse Diagnosis:</h4>
+                    <p>Nadi Pariksha utilizes ancient Ayurvedic techniques to read your pulse, providing insights into your overall health and identifying imbalances.</p>
+                    <h4 class="mb-lg-3 mb-2">Personalized Assessment:</h4>
+                    <p>During the consultation, Dr. Sruthy evaluates your pulse to understand your unique constitution (Prakriti) and current state (Vikriti).</p>
+                    <h4 class="mb-lg-3 mb-2">Customized Treatment Plan:</h4>
+                    <p>Based on the pulse diagnosis, Dr. Sruthy recommends tailored treatments and lifestyle adjustments to restore harmony and vitality.</p>
+                    <ul class="list-unstyled text-larger">
+                        <!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
+                        <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
+                        <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
+                    </ul>
+                    <a href="./General nadi-parikshna.html">
+                        <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/General nadi.png" alt="" class="img-fluid">
+        <div class="col-md-6">
+            <div class="row align-items-center">
+                <div class="col-md-6 text-center">
+                    <img src="./images/icons/General nadi.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-6"></div> <!-- This column is intentionally left empty for equal spacing -->
+            </div>
         </div>
     </div>
     </div>
