--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 						
 						<div class="tab-content px-lg-0" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-pathologist" role="tabpanel" aria-labelledby="pills-pathologist-tab" tabindex="0">
-       <div class="row justify-content-center">
+      <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -429,11 +429,10 @@
             </div>
         </div>
         <div class="col-md-6">
-            <div class="row align-items-center">
-                <div class="col-md-6 text-center">
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center"> <!-- Adjust width as needed -->
                     <img src="./images/icons/General nadi.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-6"></div> <!-- This column is intentionally left empty for equal spacing -->
             </div>
         </div>
     </div>
