--- a/index.html
+++ b/index.html
@@ -428,29 +428,33 @@
     </div>
     </div>
     <div class="tab-pane fade" id="pills-orthopedic" role="tabpanel" aria-labelledby="pills-orthopedic-tab" tabindex="0">
-        <div class="row justify-content-between align-items-stretch" style="margin: 0;">
-            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
-                <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
-                <h2 class="display-5">Premium Nadi Pariksha</h2>
-                <h4 class="mb-lg-3 mb-2">Comprehensive Health Evaluation:</h4>
-                <p>The Premium Nadi Pariksha includes a thorough pulse diagnosis along with an assessment of physical and mental health.</p>
-                <h4 class="mb-lg-3 mb-2">Integrated Techniques:</h4>
-                <p>This service combines advanced Ayurvedic methods such as yoga, dietary advice, and lifestyle counseling to enhance the diagnostic process.</p>
-                <h4 class="mb-lg-3 mb-2">Holistic Wellness Path:</h4>
-                <p>Offers deeper insights into your well-being, providing a holistic plan to rejuvenate your health through personalized recommendations and therapies.</p>
-                <!--<ul class="list-unstyled text-larger">
-                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Yoga</li>
-                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Diet</li>
-                    <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse Diagonsis</li>
-                </ul>-->
-                <a href="./premium-nadi-pariksha.html">
-                    <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
-                </a>
-            </div>
-            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
-                <img src="./images/icons/Premium nadi.jpg" alt="">
-            </div>
+        
+
+	    <div class="container">
+    <div class="row justify-content-between align-items-stretch">
+        <div class="col-md-6">
+            <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+            <h2 class="display-5">Premium Nadi Pariksha</h2>
+            <h4 class="mb-lg-3 mb-2">Comprehensive Health Evaluation:</h4>
+            <p>The Premium Nadi Pariksha includes a thorough pulse diagnosis along with an assessment of physical and mental health.</p>
+            <h4 class="mb-lg-3 mb-2">Integrated Techniques:</h4>
+            <p>This service combines advanced Ayurvedic methods such as yoga, dietary advice, and lifestyle counseling to enhance the diagnostic process.</p>
+            <h4 class="mb-lg-3 mb-2">Holistic Wellness Path:</h4>
+            <p>Offers deeper insights into your well-being, providing a holistic plan to rejuvenate your health through personalized recommendations and therapies.</p>
+            <!--<ul class="list-unstyled text-larger">
+                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Yoga</li>
+                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Diet</li>
+                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse Diagonsis</li>
+            </ul>-->
+            <a href="./premium-nadi-pariksha.html">
+                <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
+            </a>
         </div>
+        <div class="col-md-6 d-flex align-items-center justify-content-center">
+            <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid">
+        </div>
+    </div>
+</div>
     </div>
     <div class="tab-pane fade" id="pills-psychiatrist" role="tabpanel" aria-labelledby="pills-psychiatrist-tab" tabindex="0">
         <div class="row justify-content-between align-items-stretch" style="margin: 0;">
