--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
 						</div>
 						<!-- new -->
 
-						
-<div class="row justify-content-between align-items-center vh-100">
+		<!-- commented -->				
+<!--<div class="row justify-content-between align-items-center vh-100">
     <div class="col-md-5 text-center text-md-start d-flex flex-column justify-content-center">
         <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
         <h2 class="display-5">Meet our Expert Doctor</h2>
@@ -333,7 +333,7 @@
     <div class="col-md-5 d-flex justify-content-center align-items-center">
         <img src="https://shreemaathaaarogyadhaamam.com/static/img/consultant/DrSruthyJi.png" alt=".." class="rounded-6">
     </div>
-</div>
+</div>-->
 
 
 						</div>
@@ -693,6 +693,25 @@
 				</div> -->
 			</div>
 		</section>
+	       <section>
+		       <div class="container">
+			       <div class="row justify-content-between align-items-center vh-100">
+    <div class="col-md-5 text-center text-md-start d-flex flex-column justify-content-center">
+        <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+        <h2 class="display-5">Meet our Expert Doctor</h2>
+        <h3 class="m-0 pb-lg-2">Dr. Sruthy P.R</h3>
+        <!--<div class="line my-4"></div>-->
+        <div class="d-inline-flex">
+            <p class="m-0 pb-lg-2"><strong>BAMS, Senior Nadi Vaidya, Ayurveda Physician</strong></p>
+        </div>
+        <p>Dr.Sruthy is a dedicated Ayurvedic practitioner with extensive training and experience. Her approach integrates traditional Ayurvedic principles with contemporary practices to provide comprehensive health solutions. Dr. Sruthy’s commitment to patient care and her deep understanding of Ayurveda ensures a healing journey tailored to each individual's needs.</p>
+    </div>
+    <div class="col-md-5 d-flex justify-content-center align-items-center">
+        <img src="https://shreemaathaaarogyadhaamam.com/static/img/consultant/DrSruthyJi.png" alt=".." class="rounded-6">
+    </div>
+</div>
+		       </div>
+	       </section>
 
 		<section>
 			<div class="container mb-5 mt-5">
