--- a/index.html
+++ b/index.html
@@ -719,16 +719,16 @@
 			</div>
 						  </div>
 						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body" style="height: 250px;">
-				<h4 class="mb-0">Vamsi Krish</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">One of the most finest treatment that ive come across in life.<br> I found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level</p>
-			  </div>
-			</div>
+						<div class="card text-center">
+    <div class="text-center">
+        <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
+    </div>
+    <div class="card-body text-center" style="width: 80%; margin: 0 auto;">
+        <h4 class="mb-0">Vamsi Krish</h4>
+        <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+        <p class="card-text">One of the most finest treatment that ive come across in life. | found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level, to my surprise ive just got amazed by how all my problems were diagnosed within 5mins of checking my naadi ® Special mention to ‘Dr.sruthy’ !!she has been so precise on the diagnosis and have seen excellent results from then 4 4 | strongly recommend this clinic for anyone who has health related issues ,infact all the doctors there and therapists there are very well trained and equipped to give us the best results and  experience possible</p>
+    </div>
+</div>
 						  </div>
 						  <div class="carousel-item">
 							<div class="card text-center">
