--- a/index.html
+++ b/index.html
@@ -706,18 +706,18 @@
 				<div class="row">
 					<div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
 						<div class="carousel-inner">
-						  <div class="carousel-item active">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body" style="height: 250px;">
-				<h4 class="mb-0">Ramya Errabelli</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I'm a doctor& I was suffering with chronic ailments in my life . I was fedup with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. After treatment of madam I got relief in 15 days only.</p>
-			  </div>
-			</div>
-						  </div>
+<div class="carousel-item active">
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Ramya Errabelli</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">I'm a doctor & I was suffering with chronic ailments in my life . I was fed up with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. After treatment of madam I got relief in 15 days only.</p>
+        </div>
+    </div>
+</div>
 						  <div class="carousel-item">
 						<div class="card text-center">
     <div class="text-center">
@@ -741,106 +741,107 @@
             <p class="card-text">I am very thankful to Shruthiji for advising me to go for detox...it was very helpful and I much needed for my body....it was little difficult initially but later it was comfortable...and after detox, </p>
         </div>
     </div>
+</div><div class="carousel-item">
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">VenkataSubbarao Paruchuri</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">I approached Dr.Shruti Madam in Sri Sri Ayurvedic clinic, Gachibowli. She had done treatment by using crystal once in a month. Treatment went very well and my hand is very comfortable to do any activity now.</p>
+        </div>
+    </div>
 </div>
 						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body " style="height: 250px;">
-				<h4 class="mb-0">VenkataSubbarao Paruchuri</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">.I approached Dr.Shruti Madam in Sri Sri Ayurvedic clinic , Gachibowli.She had done treatment by using crystal once in a month. Treatment went very well and my hand is 
-					very comfortable to do any activity now.</p>
-			  </div>
-			</div>
-						  </div>
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Dabbiru Vidyavathi</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">For severe back pain, I sought treatment at Sri Sri Tattva Panchakarma, Gachibowli. I experienced great results within a few weeks. I am grateful to Dr. Shruthi and her team for treatment and guidance.</p>
+        </div>
+    </div>
+</div>
 						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body " style="height: 250px;">
-				<h4 class="mb-0">Dabbiru Vidyavathi</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">For severe back pain, I sought treatment at Sri Sri Tattva Panchakarma, Gachibowii. I experienced great results within a few weeks. | am grateful to Dr. Shruthi and her team for treatment and guidance.</p>
-			  </div>
-			</div>
-						  </div>
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Hemanth G</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">Amazing experience with Dr. Sruthy, a very rare nadi pariksha expert at these times. She is very advanced with nadi diagnosis and Sidha Chikitsha (a unique treatment which she does for critical patients).</p>
+        </div>
+    </div>
+</div>
 						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body " style="height: 250px;">
-				<h4 class="mb-0">Hemanth G</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">Amazing experience with Dr. Sruthy, a very rare nadi pariksha expert at  these times. She is very advanced with nadi diagnosis and Sidha Chikitsha( a unique treatment  which she does for critical patients). </p>
-			  </div>
-			</div>
-						  </div>
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Yarram Sudhir kumar Reddy</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">I have recently taken online detox offered by Dr. Sruthy and staff. It is an amazing experience :) I feel a lot lighter. They took very good care during the detox.</p>
+        </div>
+    </div>
+</div>
+
+						 <div class="carousel-item">
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Sailaja Anand</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">Consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online. At the end of it I had lost weight and also my sugar levels have come to normal without any medication.</p>
+        </div>
+    </div>
+</div>
+
 						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body " style="height: 250px;">
-				<h4 class="mb-0">Yarram Sudhir kumar Reddy</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I have recently taken online detox offered by dr sruthy and staff.. it is
-					amazing experience :). | feel lot lighter. They took very good care during the detox.</p>
-			  </div>
-			</div>
-						  </div>
-						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body " style="height: 250px;">
-				<h4 class="mb-0">Sailaja Anand</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online. At the end of it I had lost weight and also my sugar levels have come to normal without any medication </p>
-			  </div>
-			</div>
-						  </div>
-						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body " style="height: 250px;">
-				<h4 class="mb-0">Chitra Balu</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">Excellent services, cordial,friendly, family atmosphere. Best doctors!! Diagnosis of Dr Shruthi is excellent. When ever | show to Dr Shruthi | fell confident and | am taken care.| have stopped going to Allopathic doctors and medicines.</p>
-			  </div>
-			</div>
-						  </div>
-						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body " style="height: 250px;">
-				<h4 class="mb-0">Manikya Lakshmi</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I  went to Dr. Sruthy around two and a half years ago with acute wheeze and bronchitis. | recovered quite well after taking her treatment. For the last two years, i barely felt the need for any medicine related to these issues.</p>
-			  </div>
-			</div>
-						  </div>
-						  <div class="carousel-item">
-							<div class="card text-center">
-			  <div class="text-center">
-				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
-			  </div>
-			  <div class="card-body " style="height: 250px;">
-				<h4 class="mb-0">Hemanth Kotra</h4>
-				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">Dr Shruty mam has been really helpful for us always.. My baby had severe cold for few weeks
-					He was able to get better only after following their treatment . Thanks for all the help.</p>
-			  </div>
-			</div>
-						  </div>
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Chitra Balu</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">Excellent services, cordial, friendly, family atmosphere. Best doctors!! Diagnosis of Dr. Shruthi is excellent. Whenever I show to Dr. Shruthi, I feel confident and I am taken care of. I have stopped going to Allopathic doctors and medicines.</p>
+        </div>
+    </div>
+</div>
+
+						 <div class="carousel-item">
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Manikya Lakshmi</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">I went to Dr. Sruthy around two and a half years ago with acute wheeze and bronchitis. I recovered quite well after taking her treatment. For the last two years, I barely felt the need for any medicine related to these issues.</p>
+        </div>
+    </div>
+</div>
+
+						 <div class="carousel-item">
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Hemanth Kotra</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">Dr. Shruthy has been really helpful for us always. My baby had severe cold for a few weeks, and he was able to get better only after following their treatment. Thanks for all the help.</p>
+        </div>
+    </div>
+</div>
+
 						</div>
 						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
 						  <span class="carousel-control-prev-icon" style="background-color: black; border-radius: 50px;" aria-hidden="true"></span>
