--- a/index.html
+++ b/index.html
@@ -718,18 +718,20 @@
         </div>
     </div>
 </div>
-						  <div class="carousel-item">
-						<div class="card text-center">
-    <div class="text-center">
-        <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
-    </div>
-    <div class="card-body text-center" style="width: 80%; margin: 0 auto;">
-        <h4 class="mb-0">Vamsi Krish</h4>
-        <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-        <p class="card-text">I found that Ayurveda is about a treatment ® Special mention to ‘Dr.sruthy’ I strongly recommend this clinic for anyone who has health related issues</p>
+						  
+
+	<div class="carousel-item">
+    <div class="card text-center">
+        <div class="text-center">
+            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+        </div>
+        <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
+            <h4 class="mb-0">Vamsi Krish</h4>
+            <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
+            <p class="card-text">I found that Ayurveda is about a treatment ® Special mention to ‘Dr.sruthy’ I strongly recommend this clinic for anyone who has health related issues </p>
+        </div>
     </div>
 </div>
-						  </div>
 		<div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
@@ -741,7 +743,8 @@
             <p class="card-text">I am very thankful to Shruthiji for advising me to go for detox...it was very helpful and I much needed for my body....it was little difficult initially but later it was comfortable...and after detox, </p>
         </div>
     </div>
-</div><div class="carousel-item">
+</div>
+							<div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
             <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
