--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
 			 .card-body {
 				min-height: 300px;
 			 }
+				 .card-body {
+            				width: 90%;
+			 }
+			  @media (min-width: 768px) {
+       				 .card-body {
+            				width: 90%;
+      				  }
+    			}
 	 </style>
 
 </head>
